--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,18 @@
   font-family: sans-serif;
   text-align: center;
 }
+button {
+  width: 50px;
+  height: 40px;
+  box-shadow: 0 6px #999;
+}
+button:active {
+  background-color: red;
+  box-shadow: 0 3px #666;
+  transform: translateY(4px);
+}
+.label {
+  height: 1rem;
+  background-color: #7c7c7c;
+  padding: 1rem;
+}
