--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,9 @@ button {
   height: 40px;
   box-shadow: 0 6px #999;
 }
-button:active {
-  background-color: red;
+button:active,
+.active {
+  background-color: green;
   box-shadow: 0 3px #666;
   transform: translateY(4px);
 }
@@ -17,3 +18,8 @@ button:active {
   background-color: #7c7c7c;
   padding: 1rem;
 }
+/* .active {
+  background-color: ;
+  box-shadow: 0 3px #666;
+  transform: translateY(4px);
+} */
