--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+body {
+  background-color: rgba(210, 240, 238, 0.884);
+  font-family: "Inconsolata", monospace;
 }
 button {
   width: 50px;
@@ -9,17 +9,29 @@ button {
 }
 button:active,
 .active {
-  background-color: green;
+  font-weight: 800;
+  background-color: rgb(169, 255, 169);
   box-shadow: 0 3px #666;
   transform: translateY(4px);
 }
 .label {
-  height: 1rem;
-  background-color: #7c7c7c;
+  border-radius: 5px;
+  margin: 25px auto;
+  width: 200px;
+  background-color: #7c7c7c7a;
   padding: 1rem;
 }
-/* .active {
-  background-color: ;
-  box-shadow: 0 3px #666;
-  transform: translateY(4px);
-} */
+#root {
+  text-align: center;
+}
+#drum-machine {
+  margin: 0 auto;
+  max-width: 600px;
+}
+#drum-pad {
+  width: 150px;
+  display: grid;
+  grid-gap: 10px;
+  margin: auto;
+  grid-template-columns: repeat(3, 1fr);
+}
